// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Component > Snapshots > matches snapshot for default input 1`] = `
<div
  class="mb-4"
>
  <input
    class="w-full border border-gray-300 rounded-md p-2 "
  />
</div>
`;

exports[`Input Component > Snapshots > matches snapshot for disabled input 1`] = `
<div
  class="mb-4"
>
  <input
    class="w-full border border-gray-300 rounded-md p-2 "
    disabled=""
    value="Disabled"
  />
</div>
`;

exports[`Input Component > Snapshots > matches snapshot for email input 1`] = `
<div
  class="mb-4"
>
  <input
    class="w-full border border-gray-300 rounded-md p-2 "
    placeholder="Enter email"
    type="email"
  />
</div>
`;

exports[`Input Component > Snapshots > matches snapshot with custom className 1`] = `
<div
  class="mb-4"
>
  <input
    class="w-full border border-gray-300 rounded-md p-2 custom-input"
  />
</div>
`;
